feat: support multi tenant on cockpit commands